# routes/usuarios.js
@@ -3,32 +3,68 @@ const router = express.Router();
 const usuariosController = require('../controllers/usuariosController');
 
 router.post('/register', (req, res) => {
-  // #swagger.tags = ['Usuarios']
+  /* #swagger.summary = 'Registra un nuevo usuario' */
+  /* #swagger.tags = ['Usuarios'] */
+  /* #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'Registro de nuevo usuario.',
+        schema: { $ref: '#/definitions/RegisterUser' }
+    } */
   usuariosController.register(req, res);
 });
 
 router.post('/login', (req, res) => {
-  // #swagger.tags = ['Usuarios']
+  /* #swagger.summary = 'Inicia sesión' */
+  /* #swagger.tags = ['Usuarios'] */
+  /* #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'Credenciales de usuario.',
+        schema: { $ref: '#/definitions/Login' }
+    } */
   usuariosController.login(req, res);
 });
 
 router.post('/change-password', (req, res) => {
-  // #swagger.tags = ['Usuarios']
+  /* #swagger.summary = 'Cambia la contraseña del usuario' */
+  /* #swagger.tags = ['Usuarios'] */
+  /* #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'Cambio de contraseña de usuario.',
+        schema: { $ref: '#/definitions/ChangePassword' }
+    } */
   usuariosController.changePassword(req, res);
 });
 
 router.post('/forgot-password', (req, res) => {
-  // #swagger.tags = ['Usuarios']
+  /* #swagger.summary = 'Recupera la contraseña olvidada' */
+  /* #swagger.tags = ['Usuarios'] */
+  /* #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'Recuperación de contraseña de usuario.',
+        schema: { $ref: '#/definitions/ForgotPassword' }
+    } */
   usuariosController.forgotPassword(req, res);
 });
 
 router.post('/enable-user', (req, res) => {
-  // #swagger.tags = ['Usuarios']
+  /* #swagger.summary = 'Habilita un usuario' */
+  /* #swagger.tags = ['Usuarios'] */
+  /* #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'Habilitación de usuario.',
+        schema: { $ref: '#/definitions/EnableDisableUser' }
+    } */
   usuariosController.enableUser(req, res);
 });
 
 router.post('/disable-user', (req, res) => {
-  // #swagger.tags = ['Usuarios']
+  /* #swagger.summary = 'Deshabilita un usuario' */
+  /* #swagger.tags = ['Usuarios'] */
+  /* #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'Deshabilitación de usuario.',
+        schema: { $ref: '#/definitions/EnableDisableUser' }
+    } */
   usuariosController.disableUser(req, res);
 });
 
